had an image overlapping css bug fixed

--- a/src/components/TeamMessageArea/TeamMessageArea.scss
+++ b/src/components/TeamMessageArea/TeamMessageArea.scss
@@ -24,7 +24,7 @@
       width: 20vw;
       min-height: 100%;
       &-img{
-        max-width:20vw ;
+        max-width:100% ;
 
         border-radius: 100px;
         max-height:95% ;
